[package]
name = "recaptcha-service-rs"
version = "0.1.0"
authors = ["Sean Pianka <pianka@eml.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
slog = "2"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0.18"
tokio = { version = "1", default-features = false, features = ["test-util", "macros", "parking_lot"] }

